--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'org.mapstruct:mapstruct:1.5.3.Final'
     // https://mvnrepository.com/artifact/org.mapstruct/mapstruct-processor
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.6.8'
 }
 
 tasks.named('test') {
